force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/HormonePlan_VIT_D3__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_VIT_D3__c</fullName>
    <label>Hormone Plan VIT D3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>