force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Joint_pain_muscle_aches__c.field-meta.xml
<CustomField>
    <fullName>Joint_pain_muscle_aches__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Joint pain/muscle aches</label>
    <type>Checkbox</type>
</CustomField>