force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/JointPain_muscle_aches__c.field-meta.xml
<CustomField>
    <fullName>JointPain_muscle_aches__c</fullName>
    <label>Joint pain/muscle aches</label>
    <length>255</length>
    <type>Text</type>
</CustomField>