force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Neuro_Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Neuro_Other_Notes__c</fullName>
    <label>Neuro Other_Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>