force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Neuro_UE_LE_strength_grossly_intact__c.field-meta.xml
<CustomField>
    <fullName>Neuro_UE_LE_strength_grossly_intact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neuro UE/LE strength grossly intact</label>
    <type>Checkbox</type>
</CustomField>