force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/NeuroDTRwithout_hyperreflexia_asymmetry__c.field-meta.xml
<CustomField>
    <fullName>NeuroDTRwithout_hyperreflexia_asymmetry__c</fullName>
    <label>NeuroDTR without hyperreflexia/asymmetry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>