force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/NeuroUE_LE_strength_grossly_intact__c.field-meta.xml
<CustomField>
    <fullName>NeuroUE_LE_strength_grossly_intact__c</fullName>
    <label>Neuro UE/LE strength grossly intact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>