force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PE_Chest_Heart_RRR__c.field-meta.xml
<CustomField>
    <fullName>PE_Chest_Heart_RRR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE: Chest Heart RRR</label>
    <type>Checkbox</type>
</CustomField>