force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PE_Vascular_Dorsalis_Pedis_absent__c.field-meta.xml
<CustomField>
    <fullName>PE_Vascular_Dorsalis_Pedis_absent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PE: Vascular Dorsalis Pedis absent</label>
    <type>Checkbox</type>
</CustomField>