force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Phone_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Phone_Follow_up__c</fullName>
    <label>Phone Follow up</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>4 weeks</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>6 months</fullName>
            </value>
            <value>
                <fullName>Prn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>