force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Prior_Treatment_Medical_Weight_Loss__c.field-meta.xml
<CustomField>
    <fullName>Prior_Treatment_Medical_Weight_Loss__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Treatment Medical Weight Loss</label>
    <type>Checkbox</type>
</CustomField>