force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Prior_Treatment_Synthroid__c.field-meta.xml
<CustomField>
    <fullName>Prior_Treatment_Synthroid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Treatment Synthroid</label>
    <type>Checkbox</type>
</CustomField>