force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Cytomel__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Cytomel__c</fullName>
    <label>Prior Treatment Cytomel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>