force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Dessicated_Thyroid__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Dessicated_Thyroid__c</fullName>
    <label>Prior Treatment Dessicated Thyroid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>