force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Diet__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Diet__c</fullName>
    <label>Prior Treatment Diet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>