force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Estradiol__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Estradiol__c</fullName>
    <label>Prior Treatment Estradiol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>