force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Medical_Weight_Loss__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Medical_Weight_Loss__c</fullName>
    <label>Prior Treatment Medical Weight Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>