force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Other__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Other__c</fullName>
    <label>Prior Treatment Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>