force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Premarin__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Premarin__c</fullName>
    <label>Prior Treatment Premarin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>