force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Progestin__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Progestin__c</fullName>
    <label>Prior Treatment Progestin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>