force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Synthroid__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Synthroid__c</fullName>
    <label>Prior Treatment Synthroid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>