force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/PriorTreatment_Testosterone__c.field-meta.xml
<CustomField>
    <fullName>PriorTreatment_Testosterone__c</fullName>
    <label>Prior Treatment Testosterone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>