force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Testosterone_Free_female__c.field-meta.xml
<CustomField>
    <fullName>Testosterone_Free_female__c</fullName>
    <label>Testosterone - Free (female)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>