force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Testosterone_Total__c.field-meta.xml
<CustomField>
    <fullName>Testosterone_Total__c</fullName>
    <label>Testosterone - Total</label>
    <length>255</length>
    <type>Text</type>
</CustomField>