force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Vascular_Distal_pulses_intact__c.field-meta.xml
<CustomField>
    <fullName>Vascular_Distal_pulses_intact__c</fullName>
    <label>PE: Vascular Distal pulses intact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>