force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Vascular_Dorsalis_Pedis_absent__c.field-meta.xml
<CustomField>
    <fullName>Vascular_Dorsalis_Pedis_absent__c</fullName>
    <label>PE: Vascular Dorsalis Pedis absent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>