force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Vascular_Other__c.field-meta.xml
<CustomField>
    <fullName>Vascular_Other__c</fullName>
    <label>PE: Vascular Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>