force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Vital_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Vital_Temperature__c</fullName>
    <label>Vital Temperature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>