force-app/main/default/objects/Hormone_Primary_Health_Concerns__c/fields/Weight_loss_how_much__c.field-meta.xml
<CustomField>
    <fullName>Weight_loss_how_much__c</fullName>
    <label>Weight loss - how much?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>